--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -28,24 +28,3 @@
 								  0px $width $outline,
 							    0px 0px 12px $color;
 }
-
-@keyframes moveLine {
-  0% { transform: translateY(-10vh); }
-  100% { transform: translateY(10vh); }
-}
-
-@mixin animateLine ($pos, $opacity) {
-  top: $pos;
-  opacity: $opacity;
-  animation: moveLine 3s linear infinite
-}
-
-@keyframes moveDotUp {
-	0%   { top: 100%; opacity:1; }
-	100% { top: 0%; opacity:1; }
-}
-
-@keyframes moveDotRight {
-	0%   { right: 100%; opacity:1; }
-	100% { right: 0%; opacity:1; }
-}
