--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -15,6 +15,7 @@ $secondaryText: rgb(110, 110, 107);
 $purpleHighlight: rgb(150,19,113);
 $iconSize: 32px;
 $break-small: 650px;
+$break-med: 900px;
 $break-large: 1200px;
 $logoSize: 72px;
 $gradient-color1: #961371;
